--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ng-icons/core": "^32.1.0",
+    "@ng-icons/heroicons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.13",
     "better-auth": "^1.3.17",
     "ngx-sonner": "^3.1.0",
